[package]
name = "tdu_savegame_account_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.13"
rfd = { version = "0.15", default-features = false, features = ["xdg-portal", "tokio"]}
tokio = { version = "1", features = ["rt-multi-thread", "macros"]}
fs_extra = "1.3.0"
tar = "0.4.38"

[profile.dev]
overflow-checks = false
